add timestamp to garbage model split getById and getAll change api name in swagger
